[package]
name = "rgb-libs-migration"
version = "0.1.0"
edition = "2021"

[lib]
name = "rgb_libs_migration"
path = "src/lib.rs"


[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }
sea-orm-migration = { version = "=0.12.10", features = ["sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "runtime-async-std-native-tls"] }
